--- a/style.css
+++ b/style.css
@@ -59,6 +59,23 @@ body {
   text-align: center;
   margin-bottom: 46px;
 }
+.center-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 60px;
+  width: 100%;
+  height: 100vh;
+}
+
+.left-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-width: 340px;
+}
+
+
 
 
 
